# transcriber

./: Cargo.toml  README  flake.nix
src/: error.rs  lib.rs  main.rs  util.rs
src/file/: error.rs  mod.rs
src/file/input/: mod.rs  youtube.rs
src/parse/: error.rs  mod.rs  youtube.rs
src/transcription/: audio.rs  doc.rs  error.rs  html.rs  mod.rs  pdf.rs  srt.rs  text.rs  video.rs
src/transcription/audio_video/: mod.rs  whisper_local.rs
src/transcription/srt/: mod.rs
src/transform/: error.rs  mod.rs  youtube.rs
tests/: VeriCoq A Verilog to Coq converter for proof carrying hardware automation.md
