[package]
name = "transcriber"
version = "0.1.0"
edition = "2021"

[dependencies]
which = "4.0"
tempfile = "3.2"
url = "2.5.4"
srtlib = "0.2.0"
regex = "1.11.1"
fancy-regex = "0.14.0"
thiserror = "2.0.6"
reqwest = { version = "0.12.9", features = ["blocking"] }
lazy_static = "1.5.0"
rstest = "0.23.0"
glob = "0.3.1"
rand = "0.9.0-beta.1"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
deunicode = "1.6.0"
